--- a/site/4.0/examples/navbar-fixed-bottom/index.html
+++ b/site/4.0/examples/navbar-fixed-bottom/index.html
@@ -37,7 +37,7 @@ body {
     <div class="navbar-collapse collapse" id="navbarR3">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+                <a href="#" class="nav-link active" aria-current="page">Home</a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">Link</a>
