--- a/site/4.0/examples/navbars/index.html
+++ b/site/4.0/examples/navbars/index.html
@@ -55,7 +55,7 @@
     <div class="navbar-collapse collapse" id="navbarB0">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+                <a href="#" class="nav-link active" aria-current="page">Home</a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">Link</a>
@@ -88,7 +88,7 @@
     <div class="navbar-collapse collapse" id="navbarB1">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+                <a href="#" class="nav-link active" aria-current="page">Home</a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">Link</a>
@@ -123,7 +123,7 @@
     <div class="navbar-collapse collapse" id="navbarR0">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+                <a href="#" class="nav-link active" aria-current="page">Home</a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">Link</a>
@@ -156,7 +156,7 @@
     <div class="navbar-collapse collapse" id="navbarR1">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+                <a href="#" class="nav-link active" aria-current="page">Home</a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">Link</a>
@@ -189,7 +189,7 @@
     <div class="navbar-collapse collapse" id="navbarR2">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+                <a href="#" class="nav-link active" aria-current="page">Home</a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">Link</a>
@@ -222,7 +222,7 @@
     <div class="navbar-collapse collapse" id="navbarR3">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+                <a href="#" class="nav-link active" aria-current="page">Home</a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">Link</a>
@@ -255,7 +255,7 @@
     <div class="navbar-collapse collapse" id="navbarR4">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+                <a href="#" class="nav-link active" aria-current="page">Home</a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">Link</a>
@@ -290,7 +290,7 @@
     <div class="navbar-collapse collapse" id="navbarJ0">
         <ul class="navbar-nav mx-lg-auto">
             <li class="nav-item">
-                <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+                <a href="#" class="nav-link active" aria-current="page">Home</a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">Link</a>
@@ -326,7 +326,7 @@
         <div class="navbar-collapse collapse" id="navbarC0">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+                    <a href="#" class="nav-link active" aria-current="page">Home</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Link</a>
@@ -362,7 +362,7 @@
         <a href="#" class="navbar-brand">Centered</a>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+                <a href="#" class="nav-link active" aria-current="page">Home</a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">Link</a>
@@ -392,7 +392,7 @@
             <a href="#" class="navbar-brand">Centered + Container</a>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+                    <a href="#" class="nav-link active" aria-current="page">Home</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Link</a>
@@ -425,7 +425,7 @@
         <div class="navbar-collapse collapse" id="navbarIC0">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+                    <a href="#" class="nav-link active" aria-current="page">Home</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Link</a>
@@ -458,7 +458,7 @@
             <a href="#" class="navbar-brand">Centered</a>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+                    <a href="#" class="nav-link active" aria-current="page">Home</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Link</a>
@@ -491,7 +491,7 @@
         <div class="navbar-collapse collapse" id="navbarRC0">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+                    <a href="#" class="nav-link active" aria-current="page">Home</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Link</a>
