--- a/site/4.0/examples/starter-template/index.html
+++ b/site/4.0/examples/starter-template/index.html
@@ -29,7 +29,7 @@
     <a class="navbar-brand" href="">Project Name</a>
     <ul class="navbar-nav">
         <li class="nav-item">
-            <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+            <a href="#" class="nav-link active" aria-current="page">Home</a>
         </li>
         <li class="nav-item">
             <a href="#" class="nav-link">About</a>
