--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -1523,7 +1523,7 @@ function toggleRadio () {
       </a>
     </li>
     <li class="page-item">
-      <a class="page-link active" href="#">1 <span class="sr-only">(current)</span></a>
+      <a class="page-link active" aria-current="page" href="#">1</a>
     </li>
     <li class="page-item"><a class="page-link" href="#">2</a></li>
     <li class="page-item"><a class="page-link" href="#">3</a></li>
@@ -1545,7 +1545,7 @@ function toggleRadio () {
         <span class="sr-only">Previous</span>
       </span>
     </li>
-    <li class="page-item"><span class="page-link active">1 <span class="sr-only">(current)</span></span></li>
+    <li class="page-item"><span class="page-link active" aria-current="page">1</span></li>
   </ul>
 </nav>
 
@@ -2387,7 +2387,7 @@ function toggleRadio () {
   <a class="navbar-brand" href="#">Navbar</a>
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-link active" href="#" aria-current="page">Home</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Features</a>
@@ -2409,7 +2409,7 @@ function toggleRadio () {
   <a class="navbar-brand" href="#">Navbar</a>
   <ul class="nav navbar-nav">
     <li class="nav-item">
-      <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-link active" href="#" aria-current="page">Home</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Features</a>
@@ -2431,7 +2431,7 @@ function toggleRadio () {
   <a class="navbar-brand" href="#">Navbar</a>
   <ul class="nav navbar-nav">
     <li class="nav-item">
-      <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-link active" href="#" aria-current="page">Home</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Features</a>
@@ -2453,7 +2453,7 @@ function toggleRadio () {
   <a class="navbar-brand" href="#">Navbar</a>
   <ul class="nav navbar-nav">
     <li class="nav-item">
-      <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-link active" href="#" aria-current="page">Home</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Features</a>
@@ -2516,7 +2516,7 @@ function toggleRadio () {
   <div class="collapse navbar-toggleable-md" id="exCollapsingNavbar2">
     <ul class="nav navbar-nav">
       <li class="nav-item">
-        <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link active" href="#" aria-current="page">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Features</a>
