--- a/test/visual/modal.html
+++ b/test/visual/modal.html
@@ -40,7 +40,7 @@
   <div class="navbar-collapse collapse" id="navbar0">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+        <a href="#" class="nav-link active" aria-current="page">Home</a>
       </li>
       <li class="nav-item">
         <a href="#" class="nav-link">Link</a>
@@ -324,7 +324,7 @@
   <div class="navbar-collapse collapse" id="navbar1">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+        <a href="#" class="nav-link active" aria-current="page">Home</a>
       </li>
       <li class="nav-item">
         <a href="#" class="nav-link">Link</a>
