--- a/test/visual/navbar.html
+++ b/test/visual/navbar.html
@@ -51,7 +51,7 @@
     <div class="navbar-collapse collapse" id="navbarB0">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+                <a href="#" class="nav-link active" aria-current="page">Home</a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">Link</a>
@@ -84,7 +84,7 @@
     <div class="navbar-collapse collapse" id="navbarB1">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+                <a href="#" class="nav-link active" aria-current="page">Home</a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">Link</a>
@@ -119,7 +119,7 @@
     <div class="navbar-collapse collapse" id="navbarR0">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+                <a href="#" class="nav-link active" aria-current="page">Home</a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">Link</a>
@@ -152,7 +152,7 @@
     <div class="navbar-collapse collapse" id="navbarR1">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+                <a href="#" class="nav-link active" aria-current="page">Home</a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">Link</a>
@@ -185,7 +185,7 @@
     <div class="navbar-collapse collapse" id="navbarR2">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+                <a href="#" class="nav-link active" aria-current="page">Home</a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">Link</a>
@@ -218,7 +218,7 @@
     <div class="navbar-collapse collapse" id="navbarR3">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+                <a href="#" class="nav-link active" aria-current="page">Home</a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">Link</a>
@@ -251,7 +251,7 @@
     <div class="navbar-collapse collapse" id="navbarR4">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+                <a href="#" class="nav-link active" aria-current="page">Home</a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">Link</a>
@@ -286,7 +286,7 @@
     <div class="navbar-collapse collapse" id="navbarJ0">
         <ul class="navbar-nav mx-lg-auto">
             <li class="nav-item">
-                <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+                <a href="#" class="nav-link active" aria-current="page">Home</a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">Link</a>
@@ -322,7 +322,7 @@
         <div class="navbar-collapse collapse" id="navbarC0">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+                    <a href="#" class="nav-link active" aria-current="page">Home</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Link</a>
@@ -357,7 +357,7 @@
         <div class="navbar-collapse collapse" id="navbarC1">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+                    <a href="#" class="nav-link active" aria-current="page">Home</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Link</a>
@@ -393,7 +393,7 @@
         <a href="#" class="navbar-brand">Centered</a>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+                <a href="#" class="nav-link active" aria-current="page">Home</a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">Link</a>
@@ -423,7 +423,7 @@
             <a href="#" class="navbar-brand">Centered + Container</a>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+                    <a href="#" class="nav-link active" aria-current="page">Home</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Link</a>
@@ -456,7 +456,7 @@
         <div class="navbar-collapse collapse" id="navbarIC0">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+                    <a href="#" class="nav-link active" aria-current="page">Home</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Link</a>
@@ -489,7 +489,7 @@
             <a href="#" class="navbar-brand">Centered</a>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="#" class="nav-link active">Home <span class="sr-only">(current)</span></a>
+                    <a href="#" class="nav-link active" aria-current="page">Home</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Link</a>
