--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -1799,11 +1799,11 @@ function toggleRadio () {
         </ul>
     </div>
 
-    <div class="btn-group dropup">
+    <div class="btn-group">
         <button type="button" class="btn btn-group-end" data-cfw="dropdown">
-            Drop Up <span class="caret"></span>
+            Drop Up <span class="caretup"></span>
         </button>
-        <ul class="dropdown-menu">
+        <ul class="dropdown-menu dropup">
             <li class="dropdown-header">Dropdown header</li>
             <li><a href="#">Action</a></li>
             <li>
@@ -1858,11 +1858,11 @@ function toggleRadio () {
         </ul>
     </div>
 
-    <div class="btn-group dropdown-menu-reverse" style="float: right;">
+    <div class="btn-group" style="float: right;">
         <button type="button" class="btn btn-group-end" data-cfw="dropdown" data-cfw-dropdown-backlink="true">
             Drop Left <span class="caret"></span>
         </button>
-        <ul class="dropdown-menu">
+        <ul class="dropdown-menu dropreverse">
             <li class="dropdown-header">Dropdown header</li>
             <li><a href="#">Action</a></li>
             <li>
@@ -1926,38 +1926,38 @@ function toggleRadio () {
     <ul class="dropdown-menu">
         <li class="dropdown-header">Dropdown header</li>
         <li><a href="#">Action</a></li>
-        <li class="dropdown-menu-reverse">
+        <li>
             <a href="#">Left menu</a>
-            <ul>
-                <li class="dropdown-menu-reverse">
+            <ul class="dropstart">
+                <li>
                     <a href="#">Left menu</a>
-                    <ul>
+                    <ul class="dropstart">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
                 </li>
-                <li class="dropdown-menu-forward">
+                <li>
                     <a href="#">Right menu</a>
-                    <ul>
+                    <ul class="dropend">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
                 </li>
             </ul>
         </li>
-        <li class="dropdown-menu-forward">
+        <li>
             <a href="#">Right menu</a>
-            <ul>
-                <li class="dropdown-menu-reverse">
+            <ul class="dropend">
+                <li>
                     <a href="#">Left menu</a>
-                    <ul>
+                    <ul class="dropstart">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
                 </li>
-                <li class="dropdown-menu-forward">
+                <li>
                     <a href="#">Right menu</a>
-                    <ul>
+                    <ul class="dropend">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
@@ -1969,45 +1969,45 @@ function toggleRadio () {
     </ul>
 </div>
 
-<div class="btn-group dropdown-menu-forward">
+<div class="btn-group">
     <button type="button" class="btn btn-group-end" data-cfw="dropdown" data-cfw-dropdown-backlink="true">
         Drop Right <span class="caret"></span>
     </button>
-    <ul class="dropdown-menu">
+    <ul class="dropdown-menu dropstart">
         <li class="dropdown-header">Dropdown header</li>
         <li><a href="#">Action</a></li>
-        <li class="dropdown-menu-reverse">
+        <li>
             <a href="#">Left menu</a>
-            <ul>
-                <li class="dropdown-menu-reverse">
+            <ul class="dropstart">
+                <li>
                     <a href="#">Left menu</a>
-                    <ul>
+                    <ul class="dropstart">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
                 </li>
-                <li class="dropdown-menu-forward">
+                <li>
                     <a href="#">Right menu</a>
-                    <ul>
+                    <ul class="dropend">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
                 </li>
             </ul>
         </li>
-        <li class="dropdown-menu-forward">
+        <li>
             <a href="#">Right menu</a>
-            <ul>
-                <li class="dropdown-menu-reverse">
+            <ul class="dropend">
+                <li>
                     <a href="#">Left menu</a>
-                    <ul>
+                    <ul class="dropstart">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
                 </li>
-                <li class="dropdown-menu-forward">
+                <li>
                     <a href="#">Right menu</a>
-                    <ul>
+                    <ul class="dropend">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
@@ -2019,45 +2019,45 @@ function toggleRadio () {
     </ul>
 </div>
 
-<div class="btn-group dropdown-menu-reverse" style="float: right;">
+<div class="btn-group" style="float: right;">
     <button type="button" class="btn btn-group-end" data-cfw="dropdown" data-cfw-dropdown-backlink="true">
         Drop Left <span class="caret"></span>
     </button>
-    <ul class="dropdown-menu">
+    <ul class="dropdown-menu dropreverse">
         <li class="dropdown-header">Dropdown header</li>
         <li><a href="#">Action</a></li>
-        <li class="dropdown-menu-reverse">
+        <li>
             <a href="#">Left menu</a>
-            <ul>
-                <li class="dropdown-menu-reverse">
+            <ul class="dropstart">
+                <li>
                     <a href="#">Left menu</a>
-                    <ul>
+                    <ul class="dropstart">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
                 </li>
-                <li class="dropdown-menu-forward">
+                <li>
                     <a href="#">Right menu</a>
-                    <ul>
+                    <ul class="dropend">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
                 </li>
             </ul>
         </li>
-        <li class="dropdown-menu-forward">
+        <li>
             <a href="#">Right menu</a>
-            <ul>
-                <li class="dropdown-menu-reverse">
+            <ul class="dropend">
+                <li>
                     <a href="#">Left menu</a>
-                    <ul>
+                    <ul class=""dropstart">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
                 </li>
-                <li class="dropdown-menu-forward">
+                <li>
                     <a href="#">Right menu</a>
-                    <ul>
+                    <ul class="dropend">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
@@ -2071,45 +2071,45 @@ function toggleRadio () {
 
 <h3>Dropup submenu alignment</h3>
 
-<div class="btn-group dropup">
+<div class="btn-group">
     <button type="button" class="btn btn-group-end" data-cfw="dropdown" data-cfw-dropdown-backlink="true">
-        Dropup <span class="caret"></span>
+        Dropup <span class="caretup"></span>
     </button>
-    <ul class="dropdown-menu">
+    <ul class="dropdown-menu dropup">
         <li class="dropdown-header">Dropdown header</li>
         <li><a href="#">Action</a></li>
-        <li class="dropdown-menu-reverse">
+        <li>
             <a href="#">Left menu</a>
-            <ul>
-                <li class="dropdown-menu-reverse">
+            <ul class="dropstart">
+                <li>
                     <a href="#">Left menu</a>
-                    <ul>
+                    <ul class="dropstart">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
                 </li>
-                <li class="dropdown-menu-forward">
+                <li>
                     <a href="#">Right menu</a>
-                    <ul>
+                    <ul class="dropend">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
                 </li>
             </ul>
         </li>
-        <li class="dropdown-menu-forward">
+        <li>
             <a href="#">Right menu</a>
-            <ul>
-                <li class="dropdown-menu-reverse">
+            <ul class="dropend">
+                <li>
                     <a href="#">Left menu</a>
-                    <ul>
+                    <ul class="dropstart">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
                 </li>
-                <li class="dropdown-menu-forward">
+                <li>
                     <a href="#">Right menu</a>
-                    <ul>
+                    <ul class="dropend">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
@@ -2122,45 +2122,45 @@ function toggleRadio () {
 </div>
 
 
-<div class="btn-group dropup dropdown-menu-forward">
+<div class="btn-group">
     <button type="button" class="btn btn-group-end" data-cfw="dropdown" data-cfw-dropdown-backlink="true" data-cfw-dropdown-backtop="true">
-        Dropup Right <span class="caret"></span>
+        Dropup Right <span class="caretup"></span>
     </button>
-    <ul class="dropdown-menu">
+    <ul class="dropdown-menu dropup">
         <li class="dropdown-header">Dropdown header</li>
         <li><a href="#">Action</a></li>
-        <li class="dropdown-menu-reverse">
+        <li>
             <a href="#">Left menu</a>
-            <ul>
-                <li class="dropdown-menu-reverse">
+            <ul class="dropstart">
+                <li>
                     <a href="#">Left menu</a>
-                    <ul>
+                    <ul class="dropstart">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
                 </li>
-                <li class="dropdown-menu-forward">
+                <li>
                     <a href="#">Right menu</a>
-                    <ul>
+                    <ul class="dropend">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
                 </li>
             </ul>
         </li>
-        <li class="dropdown-menu-forward">
+        <li>
             <a href="#">Right menu</a>
-            <ul>
-                <li class="dropdown-menu-reverse">
+            <ul class="dropend">
+                <li>
                     <a href="#">Left menu</a>
-                    <ul>
+                    <ul class="dropstart">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
                 </li>
-                <li class="dropdown-menu-forward">
+                <li>
                     <a href="#">Right menu</a>
-                    <ul>
+                    <ul class="dropend">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
@@ -2172,45 +2172,45 @@ function toggleRadio () {
     </ul>
 </div>
 
-<div class="btn-group dropup dropdown-menu-reverse">
+<div class="btn-group">
     <button type="button" class="btn btn-group-end" data-cfw="dropdown data-cfw-dropdown-backlink="true" data-cfw-dropdown-backtop="true">
-        Dropup Left <span class="caret"></span>
+        Dropup Left <span class="caretup"></span>
     </button>
-    <ul class="dropdown-menu">
+    <ul class="dropdown-menu dropup dropreverse">
         <li class="dropdown-header">Dropdown header</li>
         <li><a href="#">Action</a></li>
-        <li class="dropdown-menu-reverse">
+        <li>
             <a href="#">Left menu</a>
-            <ul>
-                <li class="dropdown-menu-reverse">
+            <ul class="dropstart">
+                <li>
                     <a href="#">Left menu</a>
-                    <ul>
+                    <ul class="dropstart">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
                 </li>
-                <li class="dropdown-menu-forward">
+                <li>
                     <a href="#">Right menu</a>
-                    <ul>
+                    <ul class="dropend">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
                 </li>
             </ul>
         </li>
-        <li class="dropdown-menu-forward">
+        <li>
             <a href="#">Right menu</a>
-            <ul>
-                <li class="dropdown-menu-reverse">
+            <ul class="dropend">
+                <li>
                     <a href="#">Left menu</a>
-                    <ul>
+                    <ul class="dropstart">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
                 </li>
-                <li class="dropdown-menu-forward">
+                <li>
                     <a href="#">Right menu</a>
-                    <ul>
+                    <ul class="dropend">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
