--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -1217,11 +1217,11 @@ $(window).ready(function() {
                 </div>
             </div>
             <div class="mb-1">
-                <div class="dropdown dropup dropdown-menu-reverse d-inline-block">
+                <div class="dropdown d-inline-block">
                   <a href="#" role="button" data-cfw="dropdown" data-cfw-dropdown-container="body">
                     Reverse dropup w/ container<span class="caret ms-0_25"></span>
                   </a>
-                  <ul class="dropdown-menu">
+                  <ul class="dropdown-menu dropup dropreverse ">
                     <li class="dropdown-text">Non-interactive text</li>
                     <li><a href="#">Action</a></li>
                     <li>
@@ -1608,11 +1608,11 @@ $(window).ready(function() {
             </div>
 
             <!-- Single button -->
-            <div class="btn-group dropdown-menu-reverse" style="float: right;">
+            <div class="btn-group" style="float: right;">
                 <button type="button" class="btn btn-group-end" data-cfw="dropdown" data-cfw-dropdown-target="#dropdownTest_5" data-cfw-dropdown-backlink=true>
                     Reverse Dropdown <span class="caret"></span>
                 </button>
-                <ul class="dropdown-menu" id="dropdownTest_5">
+                <ul class="dropdown-menu dropreverse" id="dropdownTest_5">
                     <li class="dropdown-header">Dropdown header</li>
                     <li><a href="#5-1">Action</a></li>
                     <li>
