--- a/test/visual/input-group.html
+++ b/test/visual/input-group.html
@@ -683,7 +683,7 @@
   <div class="col-lg-6">
     <div class="input-group">
       <input type="text" class="form-control" aria-label="Text input with dropdown button">
-      <div class="input-group-addon dropdown-menu-reverse">
+      <div class="input-group-addon dropreverse">
         <button type="button" class="btn btn-secondary input-group-end" data-cfw="dropdown">
           Action <span class="caret"></span>
         </button>
@@ -723,9 +723,9 @@
     <div class="input-group-addon">
         <button type="button" class="btn btn-outline-secondary">Action</button>
     </div>
-    <div class="input-group-addon dropdown-menu-reverse">
+    <div class="input-group-addon">
         <button type="button" class="btn btn-icon btn-outline-secondary input-group-end" data-cfw="dropdown" aria-label="Toggle Dropdown"><span class="caret"></span></button>
-        <ul class="dropdown-menu ">
+        <ul class="dropdown-menu dropreverse">
             <li><a href="#">Action</a></li>
             <li><a href="#">Another action</a></li>
             <li><a href="#">Something else here</a></li>
