--- a/site/4.0/examples/navbar-fixed-bottom/index.html
+++ b/site/4.0/examples/navbar-fixed-bottom/index.html
@@ -45,9 +45,9 @@ body {
             <li class="nav-item">
                 <a href="#" class="nav-link disabled" tabindex="-1" aria-disabled="true">Disabled</a>
             </li>
-            <li class="nav-item dropdown dropup">
-                <a class="nav-link" href="#" data-cfw="dropdown">Dropup<span class="caret ms-0_25" aria-hidden="true"></span></a>
-                <ul class="dropdown-menu">
+            <li class="nav-item dropdown">
+                <a class="nav-link" href="#" data-cfw="dropdown">Dropup<span class="caretup ms-0_25" aria-hidden="true"></span></a>
+                <ul class="dropdown-menu dropup">
                     <li><a href="#">Action</a></li>
                     <li><a href="#">Another action</a></li>
                     <li><a href="#">Something else here</a></li>
